# first_rs

./: .gitignore  README.md
httpie/: Cargo.toml
httpie/src/: main.rs
queryer/: Cargo.toml
queryer/queryer/: Cargo.toml
queryer/queryer-js/: Cargo.toml  package-lock.json
queryer/queryer-js/src/: lib.rs
queryer/queryer-py/: Cargo.toml
queryer/queryer-py/src/: lib.rs
queryer/queryer/examples/: covid.rs  dialect.rs
queryer/queryer/src/: convert.rs  dialect.rs  fetcher.rs  lib.rs  loader.rs
queryer/src/: dialect.rs  loader.rs
thumbor/: Cargo.toml  README.md  abi.proto
thumbor/src/: main.rs
thumbor/src/engine/: mod.rs  my_opencv.rs  photon.rs
thumbor/src/pb/: abi.rs  mod.rs
