[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.3"
anyhow = "1"
base64 = "0.13"
bytes = "1"
image = "0.23"
lazy_static = "1"
lru = "0.7.2"
percent-encoding = "2"
photon-rs = "0.3"
prost = "0.9.0"
reqwest = "0.11"
serde = {version = "1", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
tower = {version = "0.4", features = ["util", "timeout", "load-shed", "limit"]}
tower-http = {version = "0.2.0", features = ["compression-full", "trace"]}
tracing = "0.1"
tracing-subscriber = "0.3.5"

[build-dependencies]
prost-build = "0.9.0"