[package]
name = "queryer-js"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
queryer = { path = "../queryer" }
tokio = { version = "1", features = ["full"] }

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
