[package]
name = "queryer_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
queryer = {path = "../queryer" }
tokio = {version = "1", features = ["full"]}

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[build-dependencies]
pyo3-build-config= "0.15.1"

